# bondora-rs

./: CHANGELOG.md  Cargo.toml  README.md
docs/: AccountApi.md  ApiBidSummariesRequest.md  ApiError.md  ApiResult.md  ApiResultAuctions.md  ApiResultBid.md  ApiResultBids.md  ApiResultCreateReport.md  ApiResultEventLog.md  ApiResultExtendedAuction.md  ApiResultLoanPartDetails.md  ApiResultLoanPartDetailsList.md  ApiResultMakeBids.md  ApiResultMyAccountBalance.md  ApiResultMyInvestments.md  ApiResultPublicDataset.md  ApiResultReport.md  ApiResultReportList.md  ApiResultSecondMarket.md  ApiResultSecondMarketItemSummary.md  ApiResultSecondMarketItemSummaryList.md  ApiResultSecondMarketSale.md  Auction.md  AuctionApi.md  AuctionExtended.md  AuctionRequest.md  Bid.md  BidApi.md  BidRequest.md  BidResponse.md  BidSummary.md  BorrowerHistory.md  Debt.md  DebtManagementEvent.md  EventLogItem.md  EventLogRequest.md  GoGrowAccount.md  Liability.md  LoanPartDetails.md  LoanPartDetailsRequest.md  (+22 more)
src/: lib.rs
src/apis/: account_api.rs  auction_api.rs  bid_api.rs  client.rs  mod.rs  report_api.rs  second_market_api.rs
src/models/: api_bid_summaries_request.rs  api_error.rs  api_result.rs  api_result_auctions.rs  api_result_bid.rs  api_result_bids.rs  api_result_create_report.rs  api_result_event_log.rs  api_result_extended_auction.rs  api_result_loan_part_details.rs  api_result_loan_part_details_list.rs  api_result_make_bids.rs  api_result_my_account_balance.rs  api_result_my_investments.rs  api_result_public_dataset.rs  api_result_report.rs  api_result_report_list.rs  auction.rs  (+40 more)
