[package]
name = "bondora"
version = "0.2.4"
edition = "2021"
authors = ["Jens Walter <jens@apimeister.com>"]
license = "Apache-2.0"
description = "Bondora API client"
repository = "https://github.com/JensWalter/bondora-rs"
documentation = "https://docs.rs/bondora"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.9"
serde_json = "1.0"
base64 = "0.21"
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = { version = "0.24.0", feature = ["http2"] }
tokio = { version = "1", features = ["full"] }
url = "2"
async-trait = "0.1"